# cmake_test

./: CMakeLists.txt  victor.cxx
inc/: Myclass.h
src/: Myclass.cxx
